<resources>
    <string name="app_name">Delivery</string>
    <!-- Strings related to login -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="prompt_not_registered">Not registered? Sign up!</string>
    <string name="invalid_data">Invalid data</string>
    <string name="wait_error">Please, wait</string>
    <string name="unexpected_error">Something went wrong</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="user_already_exists">User already exists</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_already_have_an_account">Already have an account? Sign in</string>
    <string name="prompt_username_requirements"><![CDATA[Username must be >5 characters]]></string>
    <string name="prompt_email_requirements">Email address does not match the format - mail@example.com</string>
    <string name="prompt_password_requirements">Password must contain at least 8 characters, 1 digit, 1 lowercase and 1 uppercase letter</string>
    <string name="prompt_confirm_password_requirements">Passwords do not match</string>
    <string name="mainfragment">MainFragment</string>
    <string name="too_many_requests">Too many requests\n\n</string>
    <string name="prompt_search">Search for products</string>
    <string name="prompt_product_name_example">Tropicana Orange Juice 1 L</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="prompt_category_example">Non alcoholic beverages</string>
    <string name="prompt_error_main">Something went wrong :(</string>
    <string name="unknown_error">Unknown error</string>
    <string name="zero_rating">0.0</string>
    <string name="prompt_price_example">0₽</string>
    <string name="ruble_sign">₽</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="minus">–</string>
    <string name="buy_now">Buy now</string>
    <string name="prompt_session_time_out_error">You\'re session has been expired. Please, sign in again</string>
    <string name="prompt_successful_sign_in">Successfully signed in</string>
    <string name="prompt_must_be_authorized">You must be authorized</string>
    <string name="refresh">Refresh</string>
    <string name="try_again">Try again</string>
    <string name="about_the_product">About the product</string>
    <string name="prompt_desc_example">Product code: 34553413 \nBrand: Tropicana</string>
    <string name="main">Main</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="settings">Settings</string>
    <string name="to_cart">To cart</string>
    <string name="prompt_result_search_title_example">Result Search</string>
    <string name="no_results">No results</string>
    <string name="by_rating">By rating</string>
    <string name="prompt_3_stars">3 stars or more</string>
    <string name="any">Any</string>
    <string name="prompt_4_stars">4 stars or more</string>
    <string name="by_price">By price</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="sort_by">Sort by</string>
    <string name="submit">Submit</string>
    <string name="choose_items">Choose items</string>
    <string name="make_an_order">Make an order</string>
    <string name="prompt_zero_items">0 items</string>
    <string name="prompt_empty_cart">Your cart is empty!</string>
    <string name="prompt_items">%1$s item(s)</string>
    <string name="prompt_products_removed">Product(s) successfully removed</string>
    <string name="address">Address</string>
    <string name="prompt_address_example">1412, Kremlevskaya st., Kazan, Tatarstan</string>
    <string name="change_address">Change address</string>
    <string name="apartment">Apartment</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="region">Region</string>
    <string name="products">Products</string>
    <string name="prompt_delivery_information">Delivery within 50–60 minutes \nPayment upon receipt</string>
    <string name="prompt_some_error">Some error occurred. Try again later</string>
    <string name="prompt_form_address">%1$s, %2$s, %3$s, %4$s</string>
    <string name="prompt_error_empty_field">Field can not be empty</string>
    <string name="prompt_order_success">Order successfully created</string>
    <string name="profile">Profile</string>
    <string name="prompt_partners_card">Your partner\'s card</string>
    <string name="orders">Orders</string>
    <string name="about_an_application">About an Application</string>
    <string name="sign_out">Sign Out</string>
    <string name="credentials">%1$s %2$s</string>
    <string name="prompt_sign_out_confirm">Are you sure you want to sign out?</string>
    <string name="prompt_order_confirm">Are you sure you want to order?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="prompt_about_an_application">Application Name: Delivery \nVersion: 1.0 \nDeveloper: Timur Medov \n\nAbout an Application: \nThis application was created by a second-year student from Kazan Federal University, Institute of Information Technology and Intelligent Systems (KFU ITIS), Timur Medov, as part of an Android production internship at Tinkoff in 2024. This app was developed for educational and demonstration purposes. \nFor any inquiries, please contact fyvakek@gmail.com.</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="profile_data">Profile data</string>
    <string name="app_theme">App theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="prompt_error_same_username">New username must not be the same as the previous one (%1$s)</string>
    <string name="prompt_successful_username_change">Username changed successfully</string>
    <string name="automatic">Automatic</string>
    <string name="order_cancelled">Order cancelled</string>
    <string name="prompt_order_date_example">The order dated 09.12.24</string>
    <string name="prompt_items_and_count_example">0 item(s), 0₽</string>
    <string name="order_history">Order History</string>
    <string name="nothing_there">Nothing there</string>
    <string name="prompt_order_created">Order created</string>
    <string name="prompt_order_in_progress">Your order is delivering</string>
    <string name="prompt_order_delivered">Order delivered</string>
    <string name="prompt_order_cancelled">Order cancelled</string>
    <string name="prompt_status_example">Status: Cancelled</string>
    <string name="status">Status</string>
    <string name="cancelled">Cancelled</string>
    <string name="prompt_last_changes_example">12:00 05.12.24</string>
    <string name="last_changes">Last changes</string>
    <string name="prompt_order_repeat">Repeat the order</string>
    <string name="prompt_order_cancel">Cancel the order</string>
    <string name="order_number">Order number</string>
    <string name="prompt_order_number_example">2342657674234</string>
    <string name="propmt_order_title">The order dated at %1$s</string>
    <string name="prompt_successful_order_cancel">Order cancelled successfully</string>
    <string name="product_rated">Product rated</string>
    <string name="prompt_successful_sign_out">Successfully signed out</string>
</resources>