<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".presentation.screens.profile.ProfileFragment">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface">

        <ImageButton
            android:id="@+id/btn_return"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:importantForAccessibility="no"
            android:src="@drawable/baseline_arrow_back_24"
            android:background="?attr/colorSurface"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginVertical="20dp"
            android:paddingHorizontal="16dp" />
    </Toolbar>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_title_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_data"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="12dp"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_credentials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="8dp"
                app:helperText="@string/name">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:paddingVertical="12dp"
                    android:hint="@string/name"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textSize="16sp"
                android:enabled="false"
                android:paddingHorizontal="24dp"
                android:layout_margin="8dp"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_title_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_theme"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="12dp"/>

    <RadioGroup
        android:id="@+id/rg_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:orientation="vertical">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light"
            android:textSize="20sp"
            android:layout_marginHorizontal="8dp"
            android:paddingHorizontal="8dp"
            style="@style/LightThemeRadioButtonStyle"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_dark"
            style="@style/DarkThemeRadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:paddingHorizontal="8dp"
            android:text="@string/dark"
            android:textSize="20sp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_daynight"
            style="@style/DayNightThemeRadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:paddingHorizontal="8dp"
            android:text="@string/automatic"
            android:textSize="20sp" />

    </RadioGroup>

</LinearLayout>