<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.screens.order.OrderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtv_title_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="12dp"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="12dp">

            <LinearLayout
                android:id="@+id/layout_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mtv_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_address_example"
                    android:textSize="16sp"
                    android:layout_margin="8dp"
                    android:textAlignment="center"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_change_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_address"
                    android:textSize="16sp"
                    android:paddingHorizontal="24dp"
                    android:layout_margin="8dp"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_change_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_apartment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginVertical="8dp"
                    app:helperText="@string/apartment">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_apartment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:paddingVertical="12dp"
                        android:hint="@string/apartment"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_street"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginVertical="8dp"
                    app:helperText="@string/street">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_street"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:paddingVertical="12dp"
                        android:hint="@string/street"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginVertical="8dp"
                    app:helperText="@string/city">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:paddingVertical="12dp"
                        android:hint="@string/city"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_region"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginVertical="8dp"
                    app:helperText="@string/region">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_region"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:paddingVertical="12dp"
                        android:hint="@string/region"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:textSize="16sp"
                    android:enabled="false"
                    android:paddingHorizontal="24dp"
                    android:layout_margin="8dp"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtv_title_products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/products"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="12dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mtv_delivery_information"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_delivery_information"
                    android:textSize="16sp"
                    android:layout_marginVertical="12dp"
                    android:layout_marginHorizontal="24dp"
                    android:textAlignment="viewStart"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mtv_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_zero_items"
                    android:textSize="16sp"
                    android:layout_marginVertical="20dp"
                    android:layout_marginHorizontal="24dp"
                    app:layout_constraintTop_toBottomOf="@id/mtv_delivery_information"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/mtv_price"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mtv_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_price_example"
                    android:textSize="24sp"
                    android:layout_marginVertical="12dp"
                    android:layout_marginHorizontal="24dp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/mtv_delivery_information"
                    app:layout_constraintStart_toEndOf="@id/mtv_count"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_order"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/make_an_order"
                    android:textSize="16sp"
                    android:enabled="false"
                    android:layout_margin="12dp"
                    app:layout_constraintTop_toBottomOf="@id/mtv_count"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>